--- a/src/makefile
+++ b/src/makefile
@@ -1,25 +1,12 @@
-OBJS = $(wildcard *.cpp)
-
-#CC specifies which compiler we're using
-CC = g++
-
-#INCLUDE_PATHS specifies the additional include paths we'll need
-INCLUDE_PATHS = -IC:\SDL\SDL2-2.26.3\x86_64-w64-mingw32\include\SDL2
-
-#LIBRARY_PATHS specifies the additional library paths we'll need
-LIBRARY_PATHS = -LC:\SDL\SDL2-2.26.3\x86_64-w64-mingw32\lib
-
-#COMPILER_FLAGS specifies the additional compilation options we're using
-# -w suppresses all warnings
-# -Wl,-subsystem,windows gets rid of the console window
-COMPILER_FLAGS = -w -Wl,-subsystem,windows
-
-#LINKER_FLAGS specifies the libraries we're linking against
-LINKER_FLAGS = -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf
-
+#OBJS specifies which files to compile as part of the project
+OBJS = main.cpp commonFunction.cpp Texture.cpp MainObject.cpp map.cpp Time.cpp Button.cpp Text.cpp
 #OBJ_NAME specifies the name of our exectuable
-OBJ_NAME = mariaohaha.exe
+OBJ_NAME = the_escape
+
+INCLUDE = -IC:\SDL\SDL2-2.26.3\x86_64-w64-mingw32\include\SDL2
+
+LIB = -LC:\SDL\SDL2-2.26.3\x86_64-w64-mingw32\lib
 
 #This is the target that compiles our executable
 all : $(OBJS)
-	$(CC) $(OBJS) $(INCLUDE_PATHS) $(LIBRARY_PATHS) $(COMPILER_FLAGS) $(LINKER_FLAGS) -o $(OBJ_NAME)
+	g++ $(OBJS) $(INCLUDE) $(LIB)  -lmingw32 -lSDL2main -lSDL2 -lSDL2_image -lSDL2_mixer -lSDL2_ttf  -o  $(OBJ_NAME)
